--- a/app/src/main/res/layout/fragment_raise_ticket.xml
+++ b/app/src/main/res/layout/fragment_raise_ticket.xml
@@ -72,7 +72,7 @@
                         android:checked="@={vm.transactionVisibiSwitch}"
                         android:textOff=""
                         android:textOn=""
-                        tools:checked="true" />
+                        tools:checked="false" />
 
                 </RelativeLayout>
 
