--- a/app/src/main/res/layout/fragment_recommended.xml
+++ b/app/src/main/res/layout/fragment_recommended.xml
@@ -76,14 +76,16 @@
             <TextView
                 android:id="@+id/tvInvestmentMonthly"
                 price="@{goal.pmt}"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/lato_bold"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:gravity="center"
+                android:padding="@dimen/_8sdp"
                 android:textColor="@android:color/white"
+                android:textSize="@dimen/_14ssp"
                 app:layout_constraintBottom_toBottomOf="@+id/mViewCircle"
-                app:layout_constraintEnd_toStartOf="@id/guidelineVCenter"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/mViewCircle"
+                app:layout_constraintStart_toStartOf="@id/mViewCircle"
                 app:layout_constraintTop_toTopOf="@+id/mViewCircle"
                 tools:text="@string/dummy" />
 
@@ -125,13 +127,13 @@
                 android:layout_marginStart="@dimen/space_16"
                 android:layout_marginTop="@dimen/space_16"
                 android:layout_marginEnd="@dimen/space_16"
-                android:visibility="gone"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="@dimen/space_2"
                 android:lineSpacingExtra="@dimen/space_4"
                 android:padding="@dimen/space_8"
                 android:text="@{vm.lumpsumpFor}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/homeView"
