--- a/app/src/main/res/layout/row_tarrakki_zyaada_investment_list_item.xml
+++ b/app/src/main/res/layout/row_tarrakki_zyaada_investment_list_item.xml
@@ -17,7 +17,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/shape_cart_view"
         android:elevation="@dimen/space_2"
-        android:padding="@dimen/space_8">
+        android:padding="@dimen/space_8"
+        tools:layout_margin="@dimen/default_space">
 
         <TextView
             android:id="@+id/tvName"
@@ -101,9 +102,9 @@
                 android:fontFamily="@font/lato_semibold"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@color/semi_black"
+                app:dprice="@{investment.totalInvestment}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvLastPriceL"
-                app:dprice="@{investment.totalInvestment}"
                 tools:text="\u20B939.55" />
 
             <TextView
@@ -126,9 +127,9 @@
                 android:fontFamily="@font/lato_semibold"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@color/semi_black"
+                app:dprice="@{investment.currentValue}"
                 app:layout_constraintStart_toStartOf="@id/tvDayChangeL"
                 app:layout_constraintTop_toBottomOf="@+id/tvDayChangeL"
-                app:dprice="@{investment.currentValue}"
                 tools:text="@string/dummy3" />
 
             <TextView
@@ -191,7 +192,7 @@
                 android:drawablePadding="@dimen/space_4"
                 android:gravity="center"
                 android:text="@string/add"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+                android:textSize="@dimen/_9sdp"
                 android:textColor="@color/colorAccent" />
 
             <TextView
@@ -203,7 +204,7 @@
                 android:drawablePadding="@dimen/space_4"
                 android:gravity="center"
                 android:text="@string/redeem"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+                android:textSize="@dimen/_9sdp"
                 android:textColor="@color/colorAccent" />
 
             <TextView
@@ -215,7 +216,7 @@
                 android:drawablePadding="@dimen/space_4"
                 android:gravity="center"
                 android:text="@string/stop"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+                android:textSize="@dimen/_9sdp"
                 android:textColor="@color/colorAccent"
                 android:visibility="@{investment.isSIP?View.VISIBLE:View.GONE}" />
 
@@ -227,7 +228,7 @@
                 android:drawablePadding="@dimen/space_4"
                 android:gravity="center"
                 android:text="@string/apply_for_debit_cart"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+                android:textSize="@dimen/_9sdp"
                 android:textColor="@color/colorAccent"
                 android:visibility="@{investment.applyForDebitCartBtnVisibility}"
                 app:applyForDebitCart="@{investment.folioData}" />
