--- a/app/src/main/res/layout/row_view_ticket_list_item.xml
+++ b/app/src/main/res/layout/row_view_ticket_list_item.xml
@@ -44,7 +44,7 @@
 
         <CheckBox
             android:id="@+id/cbStatus"
-            android:layout_width="@dimen/_60sdp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_8sdp"
             android:background="@drawable/selector_view_tickite_status_bg"
