--- a/app/src/main/res/layout/row_article_list_item.xml
+++ b/app/src/main/res/layout/row_article_list_item.xml
@@ -27,24 +27,12 @@
 
         <ImageView
             android:id="@+id/ivArticle"
-            android:layout_width="108dp"
-            android:layout_height="108dp"
+            android:layout_width="@dimen/_108sdp"
+            android:layout_height="@dimen/_108sdp"
             android:src="@drawable/temp_fpi"
             app:imgUrl="@{article.image}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <!--<ImageView
-            android:id="@+id/ivVideoPLay"
-            openYoutube="@{article.title}"
-            android:layout_width="108dp"
-            android:layout_height="108dp"
-            android:background="#80000000"
-            android:padding="@dimen/space_32"
-            android:src="@drawable/video_play"
-            android:visibility="@{article.videoVisibility()}"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />-->
 
         <TextView
             android:id="@+id/tvTitle"
@@ -59,7 +47,7 @@
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/ivArticle"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/ivArticle"
             tools:text="Are Fl Is buying the same stocks as MFs?" />
 
         <TextView
@@ -81,7 +69,7 @@
         <Button
             android:id="@+id/btnReadMore"
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
+            android:layout_height="@dimen/_32sdp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/shape_btn_idle_bg"
@@ -96,13 +84,14 @@
             app:layout_constraintStart_toEndOf="@+id/ivArticle"
             app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
+
         <View
             android:id="@+id/mDivider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="@dimen/default_space"
             android:background="@color/darker_gray"
-            app:layout_constraintTop_toBottomOf="@id/ivArticle" />
+            app:layout_constraintTop_toBottomOf="@id/barrier3" />
 
         <TextView
             android:id="@+id/tvDate"
@@ -119,21 +108,12 @@
             app:layout_constraintTop_toBottomOf="@id/mDivider"
             tools:text="3 Sep, 2018" />
 
-        <!--<TextView
-            android:id="@+id/tvComment"
+        <android.support.constraint.Barrier
+            android:id="@+id/barrier3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_8"
-            android:drawableStart="@drawable/ic_comment"
-            android:drawablePadding="@dimen/space_8"
-            android:gravity="center_vertical"
-            android:text="@{article.comments + ` Comments`}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/semi_black"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/mDivider"
-            tools:text="46 Comments" />-->
+            app:barrierDirection="bottom"
+            app:constraint_referenced_ids="ivArticle,tvTitle,tvDescription,btnReadMore" />
 
     </android.support.constraint.ConstraintLayout>
 
