--- a/app/src/main/res/layout/dialog_invest.xml
+++ b/app/src/main/res/layout/dialog_invest.xml
@@ -11,6 +11,15 @@
         <variable
             name="lumpsum"
             type="String" />
+
+        <variable
+            name="enableSIP"
+            type="boolean" />
+
+        <variable
+            name="enableLumpsum"
+            type="boolean" />
+
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -52,23 +61,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvInvestmentL" />
 
-        <TextView
-            android:id="@+id/tvRSLumpsum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/default_space"
-            android:text="@string/rs_symbol"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@id/edtLumpsum"
-            app:layout_constraintStart_toStartOf="@id/edtLumpsum"
-            app:layout_constraintTop_toTopOf="@id/edtLumpsum" />
-
         <EditText
             android:id="@+id/edtLumpsum"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_4"
-            android:background="@drawable/shape_edt_gray_round"
+            android:background="@drawable/shape_edt_enable_disable_bg"
+            android:enabled="@{enableLumpsum}"
             android:hint="@string/enter_one_time_lumpsum_amount"
             android:inputType="number"
             android:maxLines="1"
@@ -86,6 +85,17 @@
             app:layout_constraintTop_toBottomOf="@id/tvLumpsum" />
 
         <TextView
+            android:id="@+id/tvRSLumpsum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/default_space"
+            android:text="@string/rs_symbol"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="@id/edtLumpsum"
+            app:layout_constraintStart_toStartOf="@id/edtLumpsum"
+            app:layout_constraintTop_toTopOf="@id/edtLumpsum" />
+
+        <TextView
             android:id="@+id/tvSIPAmountL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -95,6 +105,29 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edtLumpsum" />
+
+        <EditText
+            android:id="@+id/edtSIPAmount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_4"
+            android:background="@drawable/shape_edt_enable_disable_bg"
+            android:enabled="@{enableSIP}"
+            android:hint="@string/enter_sip_amount"
+            android:imeOptions="actionDone"
+            android:inputType="number"
+            android:maxLines="1"
+            android:paddingStart="@dimen/_24sdp"
+            android:paddingTop="@dimen/space_8"
+            android:paddingEnd="@dimen/default_space"
+            android:paddingBottom="@dimen/space_8"
+            android:text="@={investment}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="@color/black"
+            android:textColorHint="@color/darker_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvSIPAmountL" />
 
         <TextView
             android:id="@+id/tvRSSIPAmount"
@@ -106,28 +139,6 @@
             app:layout_constraintBottom_toBottomOf="@id/edtSIPAmount"
             app:layout_constraintStart_toStartOf="@id/edtSIPAmount"
             app:layout_constraintTop_toTopOf="@id/edtSIPAmount" />
-
-        <EditText
-            android:id="@+id/edtSIPAmount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_4"
-            android:background="@drawable/shape_edt_gray_round"
-            android:hint="@string/enter_sip_amount"
-            android:inputType="number"
-            android:maxLines="1"
-            android:paddingStart="@dimen/_24sdp"
-            android:paddingTop="@dimen/space_8"
-            android:paddingEnd="@dimen/default_space"
-            android:paddingBottom="@dimen/space_8"
-            android:imeOptions="actionDone"
-            android:text="@={investment}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textColor="@color/black"
-            android:textColorHint="@color/darker_gray"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvSIPAmountL" />
 
         <Button
             android:id="@+id/btnInvest"
