--- a/app/src/main/res/layout/row_fund_list_item.xml
+++ b/app/src/main/res/layout/row_fund_list_item.xml
@@ -84,7 +84,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/_4sdp"
             android:text="@string/since_launch_sl"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textSize="@dimen/_10ssp"
             app:layout_constraintEnd_toStartOf="@id/guideline2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvReturnSinceLaunch"
@@ -115,7 +115,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/_1y_return"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textSize="@dimen/_10ssp"
             app:layout_constraintStart_toStartOf="@id/guideline2"
             app:layout_constraintTop_toBottomOf="@+id/tvReturnSinceLaunch"
             tools:text="1Y Return" />
@@ -142,13 +142,14 @@
 
         <TextView
             android:id="@+id/tvVolatilityL"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/standard_deviation"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textSize="@dimen/_10ssp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/tvReturnSinceLaunch"
-            tools:text="Standard Deviation" />
+            tools:text="Standard Deviation(5yr)" />
 
         <View
             android:id="@+id/mDivider"
@@ -158,7 +159,7 @@
             android:background="@color/lighter_gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvReturnSinceLaunchL" />
+            app:layout_constraintTop_toBottomOf="@+id/tvVolatilityL" />
 
         <TextView
             android:id="@+id/tv3YFundL"
