--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -341,7 +341,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:el_duration="500"
-                        app:el_expanded="true"
+                        app:el_expanded="false"
                         app:expanded="@{vm.whayTarrakki}">
 
                         <TextView
@@ -403,7 +403,7 @@
                         android:id="@+id/ivB1"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/_72sdp"
-                        android:padding="@dimen/_16sdp"
+                        android:padding="@dimen/_8sdp"
                         android:src="@drawable/key_benefits_1"
                         app:layout_constraintEnd_toStartOf="@id/ivB2"
                         app:layout_constraintHorizontal_weight="3.25"
@@ -429,7 +429,7 @@
                         android:layout_height="@dimen/_72sdp"
                         android:layout_marginStart="@dimen/space_8"
                         android:layout_marginEnd="@dimen/space_8"
-                        android:padding="@dimen/_16sdp"
+                        android:padding="@dimen/_8sdp"
                         android:src="@drawable/key_benefits_2"
                         app:layout_constraintEnd_toStartOf="@id/ivB3"
                         app:layout_constraintHorizontal_weight="3.5"
@@ -471,7 +471,7 @@
                         android:id="@+id/ivB3"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/_72sdp"
-                        android:padding="@dimen/_16sdp"
+                        android:padding="@dimen/_8sdp"
                         android:src="@drawable/key_benefits_3"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_weight="3.25"
