--- a/app/src/main/res/layout/fragment_auto_debit.xml
+++ b/app/src/main/res/layout/fragment_auto_debit.xml
@@ -30,9 +30,9 @@
 
                 <ImageView
                     android:id="@+id/ivBank"
+                    imgUrl="@{vm.bankMandate.bankLogo}"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    imgUrl="@{vm.bankMandate.bankLogo}"
                     android:src="@drawable/temp_icici"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -59,10 +59,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
-                    android:visibility="gone"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp10"
+                    android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="@+id/ivBank"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/ivBank" />
@@ -167,16 +167,31 @@
                 android:orientation="vertical"
                 android:padding="@dimen/space_8">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_8"
-                    android:drawableEnd="@drawable/ic_info"
-                    android:drawablePadding="@dimen/space_4"
-                    android:fontFamily="@font/lato_semibold"
-                    android:gravity="center_vertical"
-                    android:text="@string/max_auto_debit"
-                    android:textColor="@color/black" />
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="@dimen/space_4"
+                        android:fontFamily="@font/lato_semibold"
+                        android:gravity="center_vertical"
+                        android:text="@string/max_auto_debit"
+                        android:textColor="@color/black" />
+
+                    <ImageView
+                        android:id="@+id/ivInfo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_4sdp"
+                        android:padding="@dimen/_4sdp"
+                        android:src="@drawable/ic_info" />
+
+                </LinearLayout>
 
                 <RelativeLayout
                     android:id="@+id/llContainer"
@@ -209,9 +224,9 @@
                         android:background="@null"
                         android:fontFamily="@font/lato_bold"
                         android:gravity="center"
+                        android:imeOptions="actionDone"
                         android:inputType="number"
                         android:paddingStart="@dimen/default_space"
-                        android:imeOptions="actionDone"
                         android:paddingEnd="@dimen/default_space"
                         android:text="@={vm.amount}"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small"
