--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -178,6 +178,7 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:padding="@dimen/space_8"
+                android:visibility="gone"
                 android:weightSum="10"
                 app:layout_constraintEnd_toStartOf="@id/llGpl"
                 app:layout_constraintHorizontal_weight="1"
@@ -212,16 +213,13 @@
 
             <LinearLayout
                 android:id="@+id/llGpl"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/_118sdp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/space_8"
                 android:layout_marginTop="@dimen/default_space"
-                android:layout_marginEnd="@dimen/space_32"
                 android:background="@drawable/shape_g_plus_bg"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:padding="@dimen/space_8"
-                android:weightSum="10"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintStart_toEndOf="@id/llFB"
