--- a/app/src/main/res/layout/row_tarrakki_zyaada_investment_list_item.xml
+++ b/app/src/main/res/layout/row_tarrakki_zyaada_investment_list_item.xml
@@ -188,7 +188,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/space_8"
-                android:drawableStart="@drawable/ic_add"
+                android:drawableStart="@drawable/ic_add_small"
                 android:drawablePadding="@dimen/space_4"
                 android:gravity="center"
                 android:text="@string/add"
